<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/summary_credit_score_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary_heading_credit_score" />
        
        <TextView
            android:id="@+id/summary_credit_score_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/summary_credit_score_title_textview"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            tools:text="650"/>

        <View
            android:id="@+id/summary_view_beneath_credit_score"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_below="@id/summary_credit_score_title_textview"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/summary_net_worth_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_credit_score"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary_heading_net_worth" />
        
        <TextView
            android:id="@+id/summary_net_worth_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_credit_score"
            android:layout_toRightOf="@id/summary_credit_score_title_textview"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            tools:text="$73,479"/>

        <View
            android:id="@+id/summary_view_beneath_net_worth"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_below="@id/summary_net_worth_title_textview"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/summary_assets_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_net_worth"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary_heading_assets" />

        <TextView
            android:id="@+id/summary_assets_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_net_worth"
            android:layout_toRightOf="@id/summary_credit_score_title_textview"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            tools:text="$97,633"/>

        <ListView
            android:id="@+id/summary_assets_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_assets_title_textview" />

        <View
            android:id="@+id/summary_view_beneath_assets"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_below="@id/summary_assets_listview"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/summary_debts_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_assets"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary_heading_debts" />

        <TextView
            android:id="@+id/summary_debts_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_assets"
            android:layout_toRightOf="@id/summary_credit_score_title_textview"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            tools:text="$24,154"/>

        <ListView
            android:id="@+id/summary_debts_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_debts_title_textview" />

        <View
            android:id="@+id/summary_view_beneath_debts"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_below="@id/summary_debts_listview"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/summary_retirement_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_view_beneath_debts"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/summary_heading_retirement" />


        <TextView
            android:id="@+id/summary_retirement_estimated_age_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_retirement_textview"
            android:layout_marginLeft="32dp"
            tools:text="Estimated Age" />

        <TextView
            android:id="@+id/summary_retirement_estimated_age_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/summary_retirement_textview"
            android:layout_marginRight="24dp"
            tools:text="73" />

        <TextView
            android:id="@+id/summary_retirement_estimated_income_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_retirement_estimated_age_title_textview"
            android:layout_marginLeft="32dp"
            tools:text="Estimated Income" />

        <TextView
            android:id="@+id/summary_retirement_estimated_income_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/summary_retirement_estimated_age_value_textview"
            android:layout_marginRight="24dp"
            tools:text="35,000" />

        <View
            android:id="@+id/summary_view_beneath_retirement"
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/summary_retirement_estimated_income_title_textview"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/summary_insurance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/summary_view_beneath_retirement"
            android:text="@string/summary_heading_insurance" />

        <ListView
            android:id="@+id/summary_insurance_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_below="@id/summary_insurance_textview"/>

    </RelativeLayout>

</ScrollView>